# profit

./: .gitignore  .gitmodules  AGENTS.md  README.md  config.py  fetch_cli.py  fetch_top_edgar.sh  planner.md  profit_cli.py  pyproject.toml  seed_cli.py  start-frontend.sh  start-queue.sh  tmp_profit.sqlite  todo
agent_v2/: __init__.py  cli.py  constants.py  data_generation.py  insights_store.py  json_utils.py  machine.py  models.py
data_sources/: base_fetcher.py  batch_data_source_helper.py  data_source.py  data_source_manager.py  data_store.py  entities.py  entity.py  errors.py  region.py  sqlite_data_source.py  sqlite_data_store.py
docs/: agent_summary.md  edgar_fundamentals.md  json_fetching_api.md  schema.md  storage.md
network/: __init__.py  cache.py  config.py
profit/: __init__.py  config.py  seed_metadata.py
scripts/: ask_agent.py  ask_agent_v2.py  build_edgar_concept_registry.py  catalog.py  catalog_load.py  extract_edgar_facts.py  fetch_commodities.py  fetch_edgar.py  fetch_equities.py  fetch_fundamentals.py  fetch_fx.py  fetch_redfin_data.py  fetch_yfinance.py  ingest_edgar_facts.py  list_edgar_assets.py  load_redfin_dump.py  name_detector.py  print_utils.py  run_agent_v2_machine.py  seed_all.py  seed_cryptos.py  seed_currencies.py  seed_edgar.py  seed_equities.py  seed_etfs.py  seed_exchanges.py  seed_financedatabase.py  seed_funds.py  seed_indices.py  seed_moneymarkets.py  seed_regions.py  seed_sec_tickers.py  seed_ticker_list.py  seed_us_stock_symbols.py  select_unnamed_instruments.sql  zcatp.zh
tests/: conftest.py  test_batch_fetchers.py  (+23 more)
(+267 files in other folders)
